@@ -44,7 +44,7 @@ import static io.restassured.internal.common.assertion.AssertParameter.notNull;
 @SuppressWarnings("unchecked")
 public abstract class ValidatableResponseOptionsImpl<T extends ValidatableResponseOptions<T, R>, R extends ResponseBody<R> & ResponseOptions<R>> implements ValidatableResponseLogSpec<T, R> {
 
-    private final ResponseSpecificationImpl responseSpec;
+    public final ResponseSpecificationImpl responseSpec;
     private final ExtractableResponse<R> extractableResponse;
     protected final Response response;
     private final RestAssuredConfig config;
